# phishguard

./: .env.development  .env.docker  .env.example  .env.tmp  .gitignore  AI_STATUS_FINAL.md  ARCHITECTURE_DEEP_DIVE.md  BACKEND_STATUS_FINAL.md  DATAFLOW_STATUS_FINAL.md  DEPLOYMENT_GUIDE.md  DOCKER_REDIS_POSTGRES_FIXES.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  ML_ENGINE_STATUS.md  PORT_INTEGRATION_ANALYSIS.md  PORT_INTEGRATION_SUMMARY.md  PORT_STATUS.md  QUICKSTART.md  QUICK_START.md  QUICK_START_FIXED.md  README.md  ROADMAP.md  RUN_INSTRUCTIONS.md  SECURITY_PHILOSOPHY.md  SETUP_COMPLETE.md  START_HERE.txt  STATUS_REPORT.md  SYSTEM_STATUS.md  TEAM_AUDIT_REPORT.md  TEST_RESULTS.md  TODO.md  TODO_IMPLEMENTATION.md  TODO_INTEGRATION.md  TODO_PERSON3.md  (+44 more)
alembic/: env.py
app/: __init__.py  config.py  main.py  test_ml_integration.py
config/: brand_aliases.json  model_paths.py  security_policy.json  signals.json  thresholds.json  trusted_domains.json
data/: intent_samples.csv  meta_training.csv  meta_training_legacy.csv.csv
files/: README_PERSON3.md  campaign_detector.py  domain_intel_service.py  embedding_service.py  graph_schema.sql  graph_update_service.py  similarity_service.py  threat_graph_engine.py
models/: active_models.json  anomaly_vectorizer.joblib  meta_model.joblib  meta_phish_model.joblib  phish_model.joblib  phish_model_20260225_055153.joblib  phish_model_20260225_071042.joblib  phish_model_20260225_072700.joblib  tfidf_vectorizer.joblib  zero_day_model.joblib  zero_day_vectorizer.pkl  (+3 more)
(+162 files in other folders)
